--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -130,8 +130,8 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=0,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=0,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=1,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,LightingOnlyOverride=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,RectLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=0,TestImage=0,VisualizeDOF=0,VertexColors=0,PhysicalMaterialMasks=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,ToneCurve=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,ContactShadows=1,RayTracedDistanceFieldShadows=1,CapsuleShadows=1,SubsurfaceScattering=1,VisualizeSSS=0,VolumetricLightmap=1,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,HISMCOcclusionBounds=0,HISMCClusterTree=0,InstancedGrass=1,DynamicShadows=1,Particles=1,Niagara=1,SkeletalMeshes=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,MassProperties=0,CameraFrustums=0,AudioRadius=0,ForceFeedbackRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,Atmosphere=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HMDDistortion=0,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VisualizeVolumetricLightmap=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeMeshDistanceFields=0,VisualizeGlobalDistanceField=0,ScreenSpaceAO=1,DistanceFieldAO=1,VolumetricFog=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshUVDensityAccuracy=0,MaterialTextureScaleAccuracy=0,OutputMaterialTextureScales=0,RequiredTextureResolution=0,WidgetComponents=1,Bones=0,ServerDrawDebug=0,MediaPlanes=1,VREditing=0,OcclusionMeshes=0,PathTracing=0,RayTracingDebug=0,VisualizeSkyAtmosphere=0,VisualizeCalibrationColor=0,VisualizeCalibrationGrayscale=0,VisualizeCalibrationCustom=0,VirtualTexturePrimitives=0,VisualizeVolumetricCloudConservativeDensity=0,SingleLayerWaterRefractionFullPrecision=0",BufferVisualizationMode="",RayTracingDebugVisualizationMode="",ExposureSettings=(FixedEV100=1.000000,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=False,bShowOnScreenStats=True,EnabledStats=,bShowFullToolbar=True))
 
 [MRU]
-MRUItem0=/Game/Maps/SurBoxWorld
-MRUItem1=/Game/Maps/MainMenu
+MRUItem0=/Game/Maps/MainMenu
+MRUItem1=/Game/Maps/SurBoxWorld
 MRUItem2=/Game/SurBoxWorld
 
 [DetailCustomWidgetExpansion]
@@ -248,7 +248,7 @@ Landscape=PlayerCharacter_C.Rendering.LOD,
 PostProcessVolume=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
-LastLevel=/Game/Maps/SurBoxWorld
+LastLevel=/Game/Maps/MainMenu
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1318,34 +1318,41 @@ MaterialExpressionLandscapeLayerSwitch.MaterialExpressionLandscapeLayerSwitch=Tr
 MaterialExpressionLandscapeLayerSwitch.MaterialExpression=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
 MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+SurBoxWorld_C.Tick=True
+SurBoxWorld_C.Replication=True
+SurBoxWorld_C.Actor=True
+SurBoxWorld_C.Input=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/PlayerCharacter.PlayerCharacter
 OpenAssetsAtExit=/Game/Materials/ToonShader.ToonShader
 OpenAssetsAtExit=/Game/Materials/TerrainMat.TerrainMat
+OpenAssetsAtExit=/Game/UI/MainMenuUI.MainMenuUI
+OpenAssetsAtExit=/Game/Blueprints/SurBoxMode.SurBoxMode
+OpenAssetsAtExit=/Game/Blueprints/SurBoxGameInstance.SurBoxGameInstance
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Textures/Stone
-MRUItem1=/Game/Maps/SurBoxWorld
-MRUItem2=/Game/Materials/TerrainMat
-MRUItem3=/Game/Textures/Grass
-MRUItem4=/Game/Materials/ToonShader
-MRUItem5=/Game/Blueprints/PlayerCharacter
-MRUItem6=/Game/Maps/MainMenu
-MRUItem7=/Game/UI/ServerBrowser
-MRUItem8=/Game/Materials/SkyboxMat
-MRUItem9=/Game/Blueprints/Skybox
-MRUItem10=/Game/UI/MainMenuUI
-MRUItem11=/Game/Materials/MainMenuMat
-MRUItem12=/Game/Textures/ButtonPressed
-MRUItem13=/Game/Textures/ButtonHovered
-MRUItem14=/Game/Textures/ButtonNormal
-MRUItem15=/Game/Textures/MainMenuBackground
-MRUItem16=/Game/Textures/MainMenuBackgroundMat
-MRUItem17=/Game/Textures/MainMenuTexture
-MRUItem18=/Engine/EngineSky/M_Sky_Panning_Clouds2
-MRUItem19=/Engine/EngineSky/BP_Sky_Sphere
+MRUItem0=/Game/Blueprints/SurBoxGameInstance
+MRUItem1=/Game/Maps/MainMenu
+MRUItem2=/Game/Blueprints/SurBoxMode
+MRUItem3=/Game/UI/MainMenuUI
+MRUItem4=/Game/Textures/Stone
+MRUItem5=/Game/Maps/SurBoxWorld
+MRUItem6=/Game/Materials/TerrainMat
+MRUItem7=/Game/Textures/Grass
+MRUItem8=/Game/Materials/ToonShader
+MRUItem9=/Game/Blueprints/PlayerCharacter
+MRUItem10=/Game/UI/ServerBrowser
+MRUItem11=/Game/Materials/SkyboxMat
+MRUItem12=/Game/Blueprints/Skybox
+MRUItem13=/Game/Materials/MainMenuMat
+MRUItem14=/Game/Textures/ButtonPressed
+MRUItem15=/Game/Textures/ButtonHovered
+MRUItem16=/Game/Textures/ButtonNormal
+MRUItem17=/Game/Textures/MainMenuBackground
+MRUItem18=/Game/Textures/MainMenuBackgroundMat
+MRUItem19=/Game/Textures/MainMenuTexture
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1589,8 +1596,8 @@ LuminRuntimeSettings="\"Object.Audio.Audio|CookOverrides\" "
 UdpMessagingSettings="\"Object.Transport.StaticEndpoints\" "
 TextBlock="\"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object.Appearance.Font\" "
-Widget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
-Visual="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal.Margin\" \"Object.Appearance.WidgetStyle.Pressed\" "
+Widget=
+Visual=
 Spacer="\"Object.Layout.Slot.Object.Layout.Layout|Vertical Box Slot.Padding\" "
 Image="\"Object.Appearance.Brush\" \"Object.Layout.Slot.Object.Layout.Layout|Horizontal Box Slot.Padding\" "
 Border="\"Object.Appearance.Background\" "
