--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -246,6 +246,7 @@ SceneCapture2D=SceneCaptureCube.SceneCapture.General Show Flags,SceneCaptureCube
 LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
 Landscape=PlayerCharacter_C.Rendering.LOD,
 PostProcessVolume=PlayerCharacter_C.Rendering.LOD,
+Grass_C=PlayerCharacter_C.Rendering.LOD,
 
 [EditorStartup]
 LastLevel=/Game/Maps/MainMenu
@@ -1322,31 +1323,63 @@ SurBoxWorld_C.Tick=True
 SurBoxWorld_C.Replication=True
 SurBoxWorld_C.Actor=True
 SurBoxWorld_C.Input=True
+FbxImportUI.Mesh=True
+FbxImportUI.Transform=True
+FbxImportUI.Miscellaneous=True
+FbxImportUI.Material=True
+FbxImportUI.FbxFileInformation=True
+StaticMesh.StaticMeshMaterials=True
+StaticMesh.LODCustomMode=True
+StaticMesh.LOD0=True
+StaticMesh.LodSettings=True
+StaticMesh.StaticMesh=True
+StaticMesh.Collision=True
+StaticMesh.ImportSettings=True
+StaticMesh.RayTracing=True
+StaticMesh.Navigation=True
+MaterialExpressionMaterialFunctionCall.MaterialExpressionMaterialFunctionCall=True
+MaterialExpressionMaterialFunctionCall.MaterialExpression=True
+Grass_C.Tick=True
+Grass_C.Replication=True
+Grass_C.Rendering=True
+Grass_C.Collision=True
+Grass_C.Actor=True
+Grass_C.Input=True
+Grass_C.TransformCommon=True
+FoliageType_Actor.Actor=True
+FoliageType_Actor.Painting=True
+FoliageType_Actor.Placement=True
+FoliageType_Actor.InstanceSettings=True
+FoliageType_Actor.Physics=True
+FoliageType_Actor.Scalability=True
+FoliageType_Actor.VirtualTexture=True
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/StaticMeshes/Grass.Grass
+OpenAssetsAtExit=/Game/Materials/GrassMat.GrassMat
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/SurBoxGameInstance
-MRUItem1=/Game/Maps/MainMenu
-MRUItem2=/Game/Blueprints/SurBoxMode
-MRUItem3=/Game/UI/MainMenuUI
-MRUItem4=/Game/Textures/Stone
-MRUItem5=/Game/Maps/SurBoxWorld
-MRUItem6=/Game/Materials/TerrainMat
-MRUItem7=/Game/Textures/Grass
-MRUItem8=/Game/Materials/ToonShader
-MRUItem9=/Game/Blueprints/PlayerCharacter
-MRUItem10=/Game/UI/ServerBrowser
-MRUItem11=/Game/Materials/SkyboxMat
-MRUItem12=/Game/Blueprints/Skybox
-MRUItem13=/Game/Materials/MainMenuMat
-MRUItem14=/Game/Textures/ButtonPressed
-MRUItem15=/Game/Textures/ButtonHovered
-MRUItem16=/Game/Textures/ButtonNormal
-MRUItem17=/Game/Textures/MainMenuBackground
-MRUItem18=/Game/Textures/MainMenuBackgroundMat
-MRUItem19=/Game/Textures/MainMenuTexture
+MRUItem0=/Game/Blueprints/Grass
+MRUItem1=/Game/Materials/GrassMat
+MRUItem2=/Game/StaticMeshes/Grass
+MRUItem3=/Game/Blueprints/SurBoxGameInstance
+MRUItem4=/Game/Maps/MainMenu
+MRUItem5=/Game/Blueprints/SurBoxMode
+MRUItem6=/Game/UI/MainMenuUI
+MRUItem7=/Game/Textures/Stone
+MRUItem8=/Game/Maps/SurBoxWorld
+MRUItem9=/Game/Materials/TerrainMat
+MRUItem10=/Game/Textures/Grass
+MRUItem11=/Game/Materials/ToonShader
+MRUItem12=/Game/Blueprints/PlayerCharacter
+MRUItem13=/Game/UI/ServerBrowser
+MRUItem14=/Game/Materials/SkyboxMat
+MRUItem15=/Game/Blueprints/Skybox
+MRUItem16=/Game/Materials/MainMenuMat
+MRUItem17=/Game/Textures/ButtonPressed
+MRUItem18=/Game/Textures/ButtonHovered
+MRUItem19=/Game/Textures/ButtonNormal
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -1528,6 +1561,7 @@ EditorStyleSettings=True
 ConcertClientConfig=True
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Grass.Grass;
 RecentlyPlaced=/Script/Engine.PointLight;/Engine/Transient.ActorFactoryPointLight_0
 RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
 RecentlyPlaced=/Script/Engine.PostProcessVolume;/Engine/Transient.ActorFactoryBoxVolume_17
@@ -1623,7 +1657,7 @@ MaterialExpression=
 /Game/Textures/Stone.Stone=1
 
 [MessageLog]
-LastLogListing=LightingResults
+LastLogListing=FBXImport
 
 [RootWindow]
 ScreenPosition=X=130.000 Y=231.000
@@ -2539,8 +2573,8 @@ SequencerWidgets.TimeStamp=2021.11.20-08.29.04
 SequencerWidgets.LastCompileMethod=External
 SurBox.TimeStamp=2021.11.20-13.17.28
 SurBox.LastCompileMethod=External
-PerfCounters.TimeStamp=2021.11.07-12.02.43
-PerfCounters.LastCompileMethod=Unknown
+PerfCounters.TimeStamp=2021.11.20-08.28.48
+PerfCounters.LastCompileMethod=External
 Concert.TimeStamp=2021.11.20-09.45.58
 Concert.LastCompileMethod=Unknown
 ConcertTransport.TimeStamp=2021.11.20-09.45.58
@@ -2562,6 +2596,7 @@ ConcertTakeRecorder.LastCompileMethod=Unknown
 
 [PluginBrowser]
 InstalledPlugins=DarkerNodes
+InstalledPlugins=VoxelFree
 InstalledPlugins=XRVisualization
 InstalledPlugins=AdvancedSessions
 InstalledPlugins=AdvancedSteamSessions
@@ -2651,6 +2686,7 @@ Texture2D.Texture=True
 
 [SuppressableDialogs]
 ChangeVariableType_Warning=False
+Warning_NoPreviewMeshFound=False
 
 [/Script/UnrealEd.MaterialEditorOptions]
 bHideUnrelatedNodes=False
@@ -2669,6 +2705,7 @@ OnlyBuildVisibility=False
 /Game/Materials=(R=0.000000,G=0.500000,B=0.000000,A=1.000000)
 /Game/Textures=(R=0.500000,G=0.000000,B=0.000000,A=1.000000)
 /Game/LayerInfos=(R=0.215861,G=0.527115,B=1.000000,A=1.000000)
+/Game/StaticMeshes=(R=0.000000,G=1.000000,B=1.000000,A=1.000000)
 
 [MaterialEditor]
 PrimType=1
@@ -2868,4 +2905,114 @@ ButtonInfo=(B=178,G=96,R=0,A=255)
 ButtonWarning=(B=0,G=179,R=223,A=255)
 ButtonDanger=(B=0,G=0,R=178,A=255)
 ReloadTextureResources=False
+
+[FBX_Import_UI_Option_FbxImportUI]
+bOverrideFullName=True
+bCreatePhysicsAsset=True
+bAutoComputeLodDistances=True
+LodDistance0=0.000000
+LodDistance1=0.000000
+LodDistance2=0.000000
+LodDistance3=0.000000
+LodDistance4=0.000000
+LodDistance5=0.000000
+LodDistance6=0.000000
+LodDistance7=0.000000
+MinimumLodNumber=0
+LodNumber=0
+bImportAnimations=False
+bImportMaterials=False
+bImportTextures=True
+
+[FBX_Import_UI_Option_FbxStaticMeshImportData]
+StaticMeshLODGroup=None
+VertexColorImportOption=Ignore
+VertexOverrideColor=(B=255,G=255,R=255,A=255)
+bRemoveDegenerates=True
+bBuildAdjacencyBuffer=True
+bBuildReversedIndexBuffer=True
+bGenerateLightmapUVs=True
+bOneConvexHullPerUCX=True
+bAutoGenerateCollision=True
+bCombineMeshes=False
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ImportNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxSkeletalMeshImportData]
+VertexColorImportOption=Replace
+VertexOverrideColor=(B=0,G=0,R=0,A=0)
+bUpdateSkeletonReferencePose=False
+bUseT0AsRefPose=False
+bPreserveSmoothingGroups=True
+bImportMeshesInBoneHierarchy=True
+bImportMorphTargets=False
+ThresholdPosition=0.000020
+ThresholdTangentNormal=0.000020
+ThresholdUV=0.000977
+MorphThresholdPosition=0.015000
+bTransformVertexToAbsolute=True
+bBakePivotInVertex=False
+bImportMeshLODs=False
+NormalImportMethod=FBXNIM_ComputeNormals
+NormalGenerationMethod=MikkTSpace
+bComputeWeightedNormals=True
+bReorderMaterialToFbxOrder=True
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxAnimSequenceImportData]
+bImportMeshesInBoneHierarchy=True
+AnimationLength=FBXALIT_ExportedTime
+FrameImportRange=(Min=0,Max=0)
+bUseDefaultSampleRate=False
+CustomSampleRate=0
+bImportCustomAttribute=True
+bDeleteExistingCustomAttributeCurves=False
+bDeleteExistingNonCurveCustomAttributes=False
+bImportBoneTracks=True
+bSetMaterialDriveParameterOnCustomAttribute=False
+MaterialCurveSuffixes=_mat
+bRemoveRedundantKeys=True
+bDeleteExistingMorphTargetCurves=False
+bDoNotImportCurveWithZero=True
+bPreserveLocalTransform=False
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
+
+[FBX_Import_UI_Option_FbxTextureImportData]
+bInvertNormalMaps=False
+MaterialSearchLocation=Local
+BaseMaterialName=None
+BaseColorName=
+BaseDiffuseTextureName=
+BaseNormalTextureName=
+BaseEmissiveColorName=
+BaseEmmisiveTextureName=
+BaseSpecularTextureName=
+BaseOpacityTextureName=
+ImportTranslation=(X=0.000000,Y=0.000000,Z=0.000000)
+ImportRotation=(Pitch=0.000000,Yaw=0.000000,Roll=0.000000)
+ImportUniformScale=1.000000
+bConvertScene=True
+bForceFrontXAxis=False
+bConvertSceneUnit=False
 
